tests/sksl/errors/Ossfuzz40427.glsl
### Compilation failed:

error: 1: expected 'uint', but found 'uint2'
uint s, z = s.0s.0s - 1;
            ^^^^^^^^^^^
1 error
